// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multiple lines of a crash log 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <div
          className="AlertPane-headerDiv"
        >
          <h3
            className="AlertPane-headerDiv-header"
          >
            Pod crashed
          </h3>
        </div>
        <div
          className="AlertPane-headerDiv"
        >
          <p>
            <span>
              Resource: 
              foo
            </span>
            <span>
              Type: 
              ResourceCrashRebuild
            </span>
          </p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr ago
          </time>
        </div>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek the container crashed

          </span>
        </code>
        <code>
          <span
            className={null}
            style={null}
          >
            no but really it crashed

          </span>
        </code>
      </section>
      <div />
    </li>
  </ul>
</section>
`;

exports[`renders no errors 1`] = `
<section
  className="AlertPane"
>
  <section
    className="Pane-empty-message"
  >
    <svg>
      logo-wordmark-gray.svg
    </svg>
    <h2>
      No Alerts Found
    </h2>
  </section>
</section>
`;

exports[`renders one container start error 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <div
          className="AlertPane-headerDiv"
        >
          <h3
            className="AlertPane-headerDiv-header"
          >
            
          </h3>
        </div>
        <div
          className="AlertPane-headerDiv"
        >
          <p>
            <span>
              Resource: 
              foo
            </span>
            <span>
              Type: 
              PodStatusError
            </span>
          </p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr ago
          </time>
        </div>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek there is a problem

          </span>
        </code>
      </section>
      <div />
    </li>
  </ul>
</section>
`;

exports[`renders one container start error 2`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <div
          className="AlertPane-headerDiv"
        >
          <h3
            className="AlertPane-headerDiv-header"
          >
            
          </h3>
        </div>
        <div
          className="AlertPane-headerDiv"
        >
          <p>
            <span>
              Resource: 
              foo
            </span>
            <span>
              Type: 
              PodStatusError
            </span>
          </p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr ago
          </time>
        </div>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek there is a problem

          </span>
        </code>
      </section>
      <div />
    </li>
  </ul>
</section>
`;

exports[`renders one container unrecognized error 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <div
          className="AlertPane-headerDiv"
        >
          <h3
            className="AlertPane-headerDiv-header"
          >
            
          </h3>
        </div>
        <div
          className="AlertPane-headerDiv"
        >
          <p>
            <span>
              Resource: 
              vigoda
            </span>
            <span>
              Type: 
              PodStatusError
            </span>
          </p>
          <time
            dateTime="2016-12-21T23:36:07.071Z"
            title="2016-12-21 23:36"
          >
            &lt;5s ago
          </time>
        </div>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Detailed message on GarbleError

          </span>
        </code>
      </section>
      <div />
    </li>
  </ul>
</section>
`;

exports[`renders warnings 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <div
          className="AlertPane-headerDiv"
        >
          <h3
            className="AlertPane-headerDiv-header"
          >
            Pod crashed
          </h3>
        </div>
        <div
          className="AlertPane-headerDiv"
        >
          <p>
            <span>
              Resource: 
              foo
            </span>
            <span>
              Type: 
              ResourceCrashRebuild
            </span>
          </p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr ago
          </time>
        </div>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek the container crashed

          </span>
        </code>
      </section>
      <div />
    </li>
    <li
      className="AlertPane-item"
    >
      <header>
        <div
          className="AlertPane-headerDiv"
        >
          <h3
            className="AlertPane-headerDiv-header"
          >
            foo
          </h3>
        </div>
        <div
          className="AlertPane-headerDiv"
        >
          <p>
            <span>
              Resource: 
              foo
            </span>
            <span>
              Type: 
              Warning
            </span>
          </p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr ago
          </time>
        </div>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Hi I'm a warning

          </span>
        </code>
      </section>
      <div />
    </li>
  </ul>
</section>
`;

exports[`shows that a container has restarted 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <div
          className="AlertPane-headerDiv"
        >
          <h3
            className="AlertPane-headerDiv-header"
          >
            Restarts: 1
          </h3>
        </div>
        <div
          className="AlertPane-headerDiv"
        >
          <p>
            <span>
              Resource: 
              foo
            </span>
            <span>
              Type: 
              PodRestartError
            </span>
          </p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr ago
          </time>
        </div>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek the container crashed

          </span>
        </code>
      </section>
      <button
        className="AlertPane-dismissButton"
        onClick={[Function]}
      >
        Dismiss
      </button>
    </li>
  </ul>
</section>
`;

exports[`shows that a crash rebuild has occurred 1`] = `
<section
  className="AlertPane"
>
  <ul>
    <li
      className="AlertPane-item"
    >
      <header>
        <div
          className="AlertPane-headerDiv"
        >
          <h3
            className="AlertPane-headerDiv-header"
          >
            Pod crashed
          </h3>
        </div>
        <div
          className="AlertPane-headerDiv"
        >
          <p>
            <span>
              Resource: 
              foo
            </span>
            <span>
              Type: 
              ResourceCrashRebuild
            </span>
          </p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr ago
          </time>
        </div>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek the container crashed

          </span>
        </code>
      </section>
      <div />
    </li>
  </ul>
</section>
`;
